--- a/DynamicWebProject/WebContent/WEB-INF/lib/Web.xml
+++ b/DynamicWebProject/WebContent/WEB-INF/lib/Web.xml
@@ -4,6 +4,11 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>DynamicWebProject</display-name>
+
+	<session-config>
+		<session-timeout>20</session-timeout>
+	</session-config>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
